# lob-engine

./: .gitignore  CMakeLists.txt  README.md
analysis/: build_features.py  ofi_study.py  plots.py  reconstruction_audit.py
bench/: replay.cpp
data/: make_synthetic.py
docs/: architecture.puml  gap_memo.md
include/lob/: lobster_parser.hpp  order_book.hpp  types.hpp
src/: order_book.cpp
tests/: test_order_book.cpp
